--- a/discover.html
+++ b/discover.html
@@ -16,7 +16,7 @@
         <a href="tickets.html">Tickets</a>
     </div>
     <div class="container">
-
+        <h1 style="text-align: center;">探索（Discover）</h1>
     </div>
     <div class="social">
         <a href="https://facebook.com"><img src="img/facebook.png"></a>
