--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
         <a href="tickets.html">Tickets</a>
     </div>
     <div class="container">
+        <h1 style="text-align: center;">首頁（Home）</h1>
         <div class="slider">
             <img src="img/taipei.jpeg">
         </div>
