--- a/news.html
+++ b/news.html
@@ -16,7 +16,71 @@
         <a href="tickets.html">Tickets</a>
     </div>
     <div class="container">
-
+        <h1 style="text-align: center;">新聞（News）</h1>
+        <div class="cardgroup">
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+        </div>
+        <div class="cardgroup">
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardImg">
+                    <img src="img/taipei.jpeg">
+                </div>
+                <div class="cardBody">
+                    <h4>title</h4>
+                    <p>blablabla</p>
+                    <button>觀看（View）</button>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="social">
         <a href="https://facebook.com"><img src="img/facebook.png"></a>
