--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
             slider[nextindex].style.display = "block"
         }
         setInterval(() => {
-            // next()
+            next()
         }, 2000);
     </script>
 </body>
